fix: RSSのアイコンをoutlineの方に変更(#19)

--- a/src/features/post/PostPagingList.astro
+++ b/src/features/post/PostPagingList.astro
@@ -33,7 +33,7 @@ const {
     rss && (
       <div class="mt-1">
         <a href={rss}>
-          <span class="i-teenyicons:rss-solid text-xs">RSS</span>
+          <span class="i-teenyicons:rss-outline text-xs">RSS</span>
         </a>
       </div>
     )
