--- a/src/pageComponents/index.astro
+++ b/src/pageComponents/index.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
+import type { CollectionEntry } from 'astro:content';
 import PostPagingList from '@/features/post/PostPagingList.astro';
 import { extractPostSlug } from '@/utils/extractPostSlug';
 import { PAGE_SIZE, RSS_LINKS } from '@/consts';
@@ -9,7 +10,7 @@ const posts = (await getCollection('posts'))
   .slice(0, PAGE_SIZE)
   .map((post) => {
     return { ...post, slug: extractPostSlug(post.slug) };
-  });
+  }) as CollectionEntry<'posts'>[];
 ---
 
 <PostPagingList
