fix: head titleのサイト名付与はBaseHead側でやっているので、引数で渡さないようにした(#19)

--- a/src/pageComponents/posts/[page].astro
+++ b/src/pageComponents/posts/[page].astro
@@ -2,7 +2,7 @@
 import type { Page } from 'astro';
 import type { CollectionEntry } from 'astro:content';
 import PostPagingList from '@/features/post/PostPagingList.astro';
-import { SITE_TITLE, RSS_LINKS } from '@/consts';
+import { RSS_LINKS } from '@/consts';
 
 type Props = {
   page: Page<CollectionEntry<'posts'>>;
@@ -14,7 +14,7 @@ const prev = page.currentPage === 2 ? '/' : page.url.prev;
 ---
 
 <PostPagingList
-  headTitle={`記事一覧 - ${page.currentPage} | ${SITE_TITLE}`}
+  headTitle={`記事一覧 - ${page.currentPage}`}
   pageTitle={`記事一覧 - ${page.currentPage}`}
   rss={RSS_LINKS.all}
   postList={page.data}
