--- a/src/pageComponents/policy.astro
+++ b/src/pageComponents/policy.astro
@@ -1,22 +1,11 @@
 ---
 import { getEntryBySlug } from 'astro:content';
-import BaseHead from '@/components/BaseHead.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
+import PageLayout from '@/layouts/PageLayout.astro';
 
 const page = await getEntryBySlug('pages', 'policy');
 const { Content } = await page.render();
 ---
 
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <BaseHead
-      title={`プライバシーポリシー | ${SITE_TITLE}`}
-      description={SITE_DESCRIPTION}
-    />
-  </head>
-  <body>
-    <h1>{page.data.title}</h1>
-    <Content />
-  </body>
-</html>
+<PageLayout title="プライバシーポリシー">
+  <Content />
+</PageLayout>
