settings: StyleLintの基本ルール導入(#26)
ref: https://zenn.dev/k_neko3/articles/1189846d6340ef

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'HackGen';
+  font-family: HackGen;
   src: url('/fonts/HackGen-Regular-2.8.0.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
@@ -9,4 +9,3 @@
 a:focus:not(:focus-visible) {
   @apply outline-transparent;
 }
-
