feat: タグ一覧ページをpageComponents側に切り出し(#25)

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,64 +1,5 @@
 ---
-import BaseHead from '@/components/BaseHead.astro';
-import Header from '@/components/Header.astro';
-import Footer from '@/components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
-import { getCollection } from 'astro:content';
-
-const allTags = (await getCollection('posts'))
-  .map((post) => post.data.tags)
-  .flat();
-
-const tagsInfo = allTags.reduce((prev, current) => {
-  prev[current] = (prev[current] || 0) + 1;
-  return prev;
-}, {});
-const tagInfoList = Object.entries(tagsInfo).map(([key, value]) => ({
-  tagName: key,
-  count: value,
-}));
+import TagPage from '@/pageComponents/tags/index.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <link rel="sitemap" href="/sitemap-index.xml" />
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      ul {
-        list-style-type: none;
-        padding: unset;
-      }
-      ul li {
-        display: flex;
-      }
-      ul li :global(time) {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        <ul>
-          {
-            tagInfoList.map((tagInfo) => (
-              <li>
-                <a
-                  href={`/tags/${tagInfo.tagName}/1`}
-                >{`${tagInfo.tagName}(${tagInfo.count})`}</a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+<TagPage />
