fix: 記事一覧、記事ページのタグアイコンを複数形に修正(#25)

--- a/src/pageComponents/posts/[...slug].astro
+++ b/src/pageComponents/posts/[...slug].astro
@@ -32,7 +32,7 @@ const { Content } = await post.render();
         {`${CATEGORY_MAP[category]}`}
       </p>
       <p class="flex items-center">
-        <span class="i-system-uicons:tag mr-0.5 text-lg">タグ一覧</span>
+        <span class="i-system-uicons:tags mr-0.5 text-lg">タグ一覧</span>
         {tags.join(', ')}
       </p>
     </header>
