--- a/src/features/post/PostCard.astro
+++ b/src/features/post/PostCard.astro
@@ -39,7 +39,7 @@ const { pubDate, updatedDate, slug, title, category, tags } = Astro.props;
     {`${CATEGORY_MAP[category]}`}
   </p>
   <p class="flex items-center">
-    <span class="i-system-uicons:tag mr-0.5 text-lg">タグ一覧</span>
+    <span class="i-system-uicons:tags mr-0.5 text-lg">タグ一覧</span>
     {tags.join(', ')}
   </p>
 </article>
