feat: タグ一覧ページへのリンク追加(#25)

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -26,6 +26,7 @@ import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
       </ul>
     </div>
     <ul>
+      <NavLink href="/tags">タグ一覧</NavLink>
       <NavLink href="/form">お問い合わせ</NavLink>
       <NavLink href="/policy">プライバシーポリシー</NavLink>
     </ul>
