fix: pageComponentsをインポートする場合はPageをつけるようにした(#29)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import About from '@/pageComponents/about.astro';
+import AboutPage from '@/pageComponents/about.astro';
 ---
 
-<About />
+<AboutPage />
