--- a/src/pages/form.astro
+++ b/src/pages/form.astro
@@ -1,5 +1,5 @@
 ---
-import Form from '@/pageComponents/form.astro';
+import FormPage from '@/pageComponents/form.astro';
 ---
 
-<Form />
+<FormPage />
