--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,5 @@
 ---
-import TagPage from '@/pageComponents/tags/index.astro';
+import TagsPage from '@/pageComponents/tags/index.astro';
 ---
 
-<TagPage />
+<TagsPage />
