--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import IndexList from '@/pageComponents/index.astro';
+import IndexListPage from '@/pageComponents/index.astro';
 ---
 
-<IndexList />
+<IndexListPage />
