--- a/src/pages/policy.astro
+++ b/src/pages/policy.astro
@@ -1,5 +1,5 @@
 ---
-import Policy from '@/pageComponents/policy.astro';
+import PolicyPage from '@/pageComponents/policy.astro';
 ---
 
-<Policy />
+<PolicyPage />
