--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -12,7 +12,10 @@ import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
   <div
     class="fixed right-4 top-4 z-1200 max-w-xs w-full rounded-2 bg-white py-4 text-slate-800 shadow-md"
   >
-    <button id="close-menu-button" title="閉じる" class="ml-auto block px4 py-1"
+    <button
+      id="close-menu-button"
+      title="メニューを閉じる"
+      class="ml-auto block px4 py-1"
       ><span class="i-system-uicons:cross block text-2xl"></span></button
     >
     <nav class="grid gap-y-4">
