refactor: ナビゲーションリンクは別コンポーネントに切り出した(#31)

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,6 +1,5 @@
 ---
-import NavLink from '@/components/NavLink.astro';
-import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
+import NavLinkList from '@/components/NavLinkList.astro';
 ---
 
 <div id="menu" class="hidden">
@@ -18,28 +17,6 @@ import { CATEGORY_LIST, CATEGORY_MAP } from '@/consts';
       class="ml-auto block px4 py-1"
       ><span class="i-system-uicons:cross block text-2xl"></span></button
     >
-    <nav class="grid gap-y-4">
-      <ul>
-        <NavLink href="/">Home</NavLink>
-        <NavLink href="/about">About</NavLink>
-      </ul>
-      <div>
-        <p class="px-4 font-600">Blog Category List</p>
-        <ul>
-          {
-            CATEGORY_LIST.map((category) => (
-              <NavLink href={`/${category}/1`}>
-                {CATEGORY_MAP[category]}
-              </NavLink>
-            ))
-          }
-        </ul>
-      </div>
-      <ul>
-        <NavLink href="/tags">タグ一覧</NavLink>
-        <NavLink href="/form">お問い合わせ</NavLink>
-        <NavLink href="/policy">プライバシーポリシー</NavLink>
-      </ul>
-    </nav>
+    <NavLinkList />
   </div>
 </div>
