feat: コピーボタンのスタイル作成(#41)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,11 @@
   font-display: swap;
 }
 
-a:focus:not(:focus-visible) {
+button {
+  @apply cursor-pointer;
+}
+
+a:focus:not(:focus-visible),
+button:focus:not(:focus-visible) {
   @apply outline-transparent;
 }
