--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -98,7 +98,7 @@
   }
 
   pre {
-    @apply p-4;
+    @apply p-4 relative;
   }
 
   pre,
@@ -112,6 +112,15 @@
 
   pre > code {
     @apply bg-transparent text-inherit;
+  }
+
+  .copy-code-button {
+    @apply text-white text-xs absolute top-0 right-0 py-1 px-3 opacity-0 transition-opacity;
+  }
+
+  .copy-code-button:focus,
+  pre:hover > .copy-code-button {
+    @apply opacity-100;
   }
 
   blockquote {
