feat: サイドバーはスクロール追従するようにした(#43)

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -10,7 +10,9 @@ type Props = {
 const { markdownHeadings = [] } = Astro.props;
 ---
 
-<aside class="rounded-2 bg-white py-4 md:min-w-52">
+<aside
+  class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:min-w-52"
+>
   <div class="mb-2 flex justify-around">
     <button id="select-menu-button" title="ナビゲーションメニュー"
       ><span class="i-teenyicons:pin-outline block text-xl"></span></button
