--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,7 +33,7 @@ const { title, description, noTopHeading, markdownHeadings } = Astro.props;
       <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
         <div class="my-8">
           <div class="mx-auto flex px-2 container sm:px-4">
-            <div class="hidden place-self-start lg:block">
+            <div class="hidden place-self-auto lg:block">
               <SideBar markdownHeadings={markdownHeadings} />
             </div>
             <div class="flex-grow-1 rounded-2 bg-white p-4 lg:ml-6">
