feat: カスタム下線スタイル作成、サイドバー切り替えボタンに適用(#43)

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -13,11 +13,17 @@ const { markdownHeadings = [] } = Astro.props;
 <aside
   class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:min-w-52"
 >
-  <div class="mb-2 flex justify-around">
-    <button id="select-menu-button" title="ナビゲーションメニュー"
+  <div class="mb-1 flex justify-around">
+    <button
+      id="select-menu-button"
+      title="ナビゲーションリンク一覧を表示"
+      class="custom-after-border-b rounded-6 p-2 focus:bg-slate-2/50 hover:bg-slate-2/70"
       ><span class="i-teenyicons:pin-outline block text-xl"></span></button
     >
-    <button id="select-anchor-button" title="アンカーリンク一覧"
+    <button
+      id="select-anchor-button"
+      title="アンカーリンク一覧を表示"
+      class="rounded-6 p-2 focus:bg-slate-2/50 hover:bg-slate-2/70"
       ><span class="i-teenyicons:anchor-solid block text-xl"></span></button
     >
   </div>
