--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -115,7 +115,7 @@
   }
 
   .copy-code-button {
-    @apply text-white text-xs absolute top-0 right-0 py-1 px-3 opacity-0 transition-opacity;
+    @apply text-white text-xs absolute top-0 right-0 py-1 px-3 opacity-0;
   }
 
   .copy-code-button:focus,
