fix: サイドバーの横幅を少し広くした - 240px(#43)

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -11,13 +11,13 @@ const { markdownHeadings = [] } = Astro.props;
 ---
 
 <aside
-  class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:min-w-52"
+  class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:min-w-60"
 >
   <div class="mb-1 flex justify-around">
     <button
       id="select-menu-button"
       title="ナビゲーションリンク一覧を表示"
-      class="custom-after-border-b rounded-6 p-2 focus:bg-slate-2/50 hover:bg-slate-2/70"
+      class="rounded-6 p-2 custom-after-border-b focus:bg-slate-2/50 hover:bg-slate-2/70"
       ><span class="i-teenyicons:pin-outline block text-xl"></span></button
     >
     <button
