refactor: サイドバーのナビゲーションに関するidをリネーム(#43)

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -19,7 +19,7 @@ const selectAnchorButtonTitle = isMarkdownPage
 >
   <div class="mb-1 flex justify-around">
     <button
-      id="select-menu-button"
+      id="select-nav-button"
       title="ナビゲーションリンク一覧を表示"
       class="rounded-6 p-2 custom-after-border-b focus:bg-slate-2/50 hover:bg-slate-2/70"
       ><span class="i-teenyicons:pin-outline block text-xl"></span></button
@@ -32,7 +32,7 @@ const selectAnchorButtonTitle = isMarkdownPage
       ><span class="i-teenyicons:anchor-solid block text-xl"></span></button
     >
   </div>
-  <div id="sidebar-menu">
+  <div id="sidebar-nav">
     <NavLinkList />
   </div>
   <div id="sidebar-anchor-list" class="hidden">
