feat: アンカーリンク一覧のメニュー作成 & 共通化(#43)

--- a/src/components/AnchorLinkList.astro
+++ b/src/components/AnchorLinkList.astro
@@ -3,10 +3,10 @@ import { MarkdownHeading } from 'astro';
 import AnchorLinkListItem from '@/components/AnchorLinkListItem.astro';
 
 type Props = {
-  markdownHeadings?: MarkdownHeading[];
+  markdownHeadings: MarkdownHeading[];
 };
 
-const { markdownHeadings = [] } = Astro.props;
+const { markdownHeadings } = Astro.props;
 ---
 
 <ul>
