--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,10 +1,16 @@
 ---
-import NavLinkList from '@/components/NavLinkList.astro';
+import { MENU_TYPE_LIST } from '@/consts';
+
+type Props = {
+  type: (typeof MENU_TYPE_LIST)[number];
+};
+
+const { type } = Astro.props;
 ---
 
-<div id="menu" class="hidden">
+<div id=`${type}-menu` class="hidden">
   <div
-    id="menu-backdrop"
+    id=`${type}-menu-backdrop`
     class="fixed bottom-0 left-0 right-0 top-0 z-1000 backdrop-blur-sm"
   >
   </div>
@@ -12,11 +18,11 @@ import NavLinkList from '@/components/NavLinkList.astro';
     class="fixed right-4 top-4 z-1200 max-w-xs w-full rounded-2 bg-white py-4 text-slate-800 shadow-md"
   >
     <button
-      id="close-menu-button"
+      id=`close-${type}-menu-button`
       title="メニューを閉じる"
       class="ml-auto block px4 py-1"
       ><span class="i-system-uicons:cross block text-2xl"></span></button
     >
-    <NavLinkList />
+    <slot />
   </div>
 </div>
