feat: メニューのスクロール制御対応(#43)
背景はスクロールできないように。
メニューはスクロールできるように。

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -15,7 +15,7 @@ const { type } = Astro.props;
   >
   </div>
   <div
-    class="fixed right-4 top-4 z-1200 max-w-xs w-full rounded-2 bg-white py-4 text-slate-800 shadow-md"
+    class="fixed right-4 top-4 z-1200 max-h-[calc(100vh_-_32px)] max-w-xs w-full overflow-y-auto rounded-2 bg-white py-4 text-slate-800 shadow-md"
   >
     <button
       id=`close-${type}-menu-button`
