fix: 記事ページ生成時に、年フォルダ分をパスから取り除くように修正(#45)

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,11 +1,13 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
 import PostSlugPage from '@/pageComponents/posts/[...slug].astro';
+import { extractPostSlug } from '@/utils/extractPostSlug';
 
 export async function getStaticPaths() {
   const posts = await getCollection('posts');
+  console.log(posts);
   return posts.map((post) => ({
-    params: { slug: post.slug },
+    params: { slug: extractPostSlug(post.slug) },
     props: post,
   }));
 }
