--- a/src/pageComponents/posts/[...slug].astro
+++ b/src/pageComponents/posts/[...slug].astro
@@ -23,7 +23,7 @@ const { Content, headings } = await post.render();
       <p>
         <FormattedDate date={pubDate} />
         {
-          updatedDate && (
+          updatedDate && pubDate.toString() !== updatedDate.toString() && (
             <span class="inline-flex items-center">
               (<span class="i-system-uicons:refresh mr-1">更新日</span>
               <FormattedDate date={updatedDate} />)
