--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -93,17 +93,25 @@
     @apply bg-slate-50;
   }
 
+  hr {
+    @apply my-5;
+  }
+
   .remark-code-title {
-    @apply font-hackGen text-xs px-2.5 py-0.5 bg-slate-600 inline-block text-white leading-5 rounded-t-1;
+    @apply font-hackGen text-xs px-2.5 py-0.5 bg-slate-600 inline-block text-white leading-5 rounded-t-1 mt-4;
   }
 
   pre {
-    @apply p-4 relative;
+    @apply p-4 relative mb-5;
   }
 
   pre,
   code {
     @apply font-hackGen;
+  }
+
+  :not(.remark-code-title) + pre {
+    @apply mt-4;
   }
 
   :not(pre) > code {
