--- a/src/features/post/PostCard.astro
+++ b/src/features/post/PostCard.astro
@@ -18,7 +18,7 @@ const { pubDate, updatedDate, slug, title, category, tags } = Astro.props;
   <p class="text-sm">
     <FormattedDate date={pubDate} />
     {
-      updatedDate && (
+      updatedDate && pubDate.toString() !== updatedDate.toString() && (
         <span class="inline-flex items-center">
           (<span class="i-system-uicons:refresh mr-1">更新日</span>
           <FormattedDate date={updatedDate} />)
