--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -98,7 +98,11 @@
   }
 
   .remark-code-title {
-    @apply font-hackGen text-xs px-2.5 py-0.5 bg-slate-600 inline-block text-white leading-5 rounded-t-1 mt-4;
+    @apply font-hackGen text-xs px-2.5 py-0.5 bg-slate-600 inline-block text-white leading-5 rounded-t-1;
+  }
+
+  :not(ul, ol) + .remark-code-title {
+    @apply mt-4;
   }
 
   pre {
