fix: サイドバーの横幅を固定にした(#45)
変動にすると、見出し一覧で折り返しの仕方によって膨らむのが気になったので。

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -15,7 +15,7 @@ const selectAnchorButtonTitle = isMarkdownPage
 ---
 
 <aside
-  class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:min-w-60"
+  class="sticky top-4 max-h-[calc(100vh_-_32px)] overflow-y-auto rounded-2 bg-white py-4 md:w-60"
 >
   <div class="mb-1 flex justify-around">
     <button
