--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,12 +35,12 @@ const isMarkdownPage = markdownHeadings?.length !== 0;
       <Header noTopHeading={noTopHeading} isMarkdownPage={isMarkdownPage} />
       <main class="flex-shrink-0 flex-grow-1 flex-basis-auto">
         <div class="my-8">
-          <div class="mx-auto flex px-4 container">
+          <div class="mx-auto flex px-2 container sm:px-4">
             <div class="hidden place-self-auto lg:block">
               <SideBar markdownHeadings={markdownHeadings} />
             </div>
             <div
-              class="max-w-full flex-grow-1 overflow-x-hidden rounded-2 bg-white p-6 lg:ml-6"
+              class="max-w-full flex-grow-1 overflow-x-hidden rounded-2 bg-white px-4 py-6 lg:ml-6 sm:px-6"
             >
               <slot />
             </div>
