fix: コンテンツ部分の縦スクロールをなしにした（ウィンドウ単位でスクロールすればいいので） (#49)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const isMarkdownPage = markdownHeadings?.length !== 0;
               <SideBar markdownHeadings={markdownHeadings} />
             </div>
             <div
-              class="max-w-full flex-grow-1 overflow-x-hidden rounded-2 bg-white px-4 py-6 lg:ml-6 sm:px-6"
+              class="max-w-full flex-grow-1 overflow-hidden rounded-2 bg-white px-4 py-6 lg:ml-6 sm:px-6"
             >
               <slot />
             </div>
