--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -72,7 +72,7 @@
   }
 
   img:not(.link-card img) {
-    @apply max-w-full h-auto my-4 mx-auto block;
+    @apply max-w-full h-auto my-4 mx-auto block drop-shadow-md;
   }
 
   table {
