fix: アンカーリンク一覧の上余白を追加(#49)

--- a/src/components/AnchorLinkList.astro
+++ b/src/components/AnchorLinkList.astro
@@ -9,7 +9,7 @@ type Props = {
 const { markdownHeadings } = Astro.props;
 ---
 
-<ul>
+<ul class="mt-2">
   {
     markdownHeadings.map((heading) => (
       <AnchorLinkListItem href={`#${heading.slug}`}>{`${'#'.repeat(
