fix: Aboutページのリンク下線余白調整(#50)

--- a/src/pageComponents/about.astro
+++ b/src/pageComponents/about.astro
@@ -23,7 +23,8 @@ import '@/styles/markdown.scss';
         ここ数年はフロントエンドメインで活動しています。 <br
         />経歴や経験技術、資格などは<a
           href={ACCOUNT_LINKS.portfolio}
-          class="underline decoration-solid">ポートフォリオ</a
+          class="underline underline-offset-2 decoration-solid"
+          >ポートフォリオ</a
         >を参照。
       </p>
     </div>
