--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -142,4 +142,11 @@
   blockquote {
     @apply font-italic text-slate-500 border-l-3 border-slate-400 pl-4 my-4;
   }
+
+  // ツイートの埋め込みをすると
+  // インラインスタイルで余白定義されているので上書きする
+  div.twitter-tweet:is([style]) {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+  }
 }
